<resources>
    <string name="app_name">Radio Stream Playback</string>
    <string name="listen">Listen</string>
    <string name="sort_amp_filter">Sort &amp; Filter</string>
    <string name="sort_by">Sort by</string>
    <string name="apply">Apply</string>
    <string name="oops">Oops, something went wrong with your request</string>
    <string name="error_description"><![CDATA[If this issue will persist for a while please let us know via <a href="mailto:slipokurov.illia@gmail.com">email</a>]]></string>
    <string name="try_again">Try again</string>
    <string name="internet_error">It looks like something wrong with your internet connection</string>
    <string name="currently_playing">Currently Playing:</string>

    <!-- Sort items -->
    <string name="filter_name">Name</string>
    <string name="filter_reliability_asc">Reliability ↓</string>
    <string name="filter_reliability_desc">Reliability ↑</string>
    <string name="filter_popularity_asc">Popularity ↓</string>
    <string name="filter_popularity_desc">Popularity ↑</string>

    <!-- WCAG Strings -->
    <string name="radio_station_logo_image">Radio station logo image</string>
    <string name="close">Close</string>
    <string name="play_pause_button">Play Pause Button</string>
</resources>