<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/dialog_rounded_background"
        android:backgroundTint="@color/background"
        android:paddingVertical="24dp"
        android:paddingHorizontal="24dp"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/textLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Text.Naming"
            android:text="@string/oops"/>

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Text.Description"
            android:text="@string/error_description"
            android:textColorLink="@color/special"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/buttonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            style="@style/Button.Regular"
            android:paddingVertical="8dp"
            android:paddingHorizontal="12dp"
            android:layout_marginTop="32dp"
            android:text="@string/close"/>

    </LinearLayout>

</FrameLayout>