<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/rounded_top_background"
    android:backgroundTint="@color/foreground"
    android:minHeight="400dp">

    <View
        android:layout_width="150dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded_background"
        android:backgroundTint="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Text.Heading"
            android:text="@string/sort_amp_filter"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"/>

        <ImageView
            android:id="@+id/imageClose"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_close"
            app:tint="@color/white"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black30"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:paddingBottom="36dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Text.Naming"
            android:textAllCaps="true"
            android:text="@string/sort_by"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/sortChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:selectionRequired="true"
            app:singleSelection="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Text.Naming"
            android:textAllCaps="true"
            android:text="@string/sort_by"
            android:layout_marginTop="24dp"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filterChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/buttonApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            style="@style/Button.Regular"
            android:gravity="center"
            android:textSize="24sp"
            android:paddingVertical="8dp"
            android:layout_marginTop="24dp"/>

    </LinearLayout>

</LinearLayout>